--- a/public/index.html
+++ b/public/index.html
@@ -2,63 +2,359 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tailwind</title>
     <link href="styles.css" rel="stylesheet">
+    <link href="custom.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
-    <div>
-        <div>
-            <nav>
-                <div>
-                    <h1>
-                        <a href="/">Food Ninja</a>
-                    </h1>
-                </div>
-                <ul>
-                    <li>
-                        <a href="#">
-                            <span>Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>About</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span>Contact</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-        <main>
-            <div>
-                <a href="#">Login</a>
-                <a href="#">Sign up</a>
-            </div>
-
-            <header>
-                <h2>Recipes</h2>
-                <h3>For Ninjas</h3>
-            </header>
-
-            <div>
-                <div>
-                    <img src="" >
-                    <div>
-                        <span>5 BEan Chillu Stew</span>
-                        <span>Recipe by Mario</span>
-                    </div>
-                </div>
-            </div>
-
-            <div>
-                <div>Load more</div>
-            </div>
-        </main>
+<nav class="nav flex flex-wrap items-center justify-between px-4 bg-gray-300">
+    <div class="flex items-center mr-6 py-3 text-grey-darkest">
+        <img src="img/icon.jpg" class="w-8" />
+        <span class="font-bold text-lg tracking-tight">Company Logo</span>
     </div>
+
+    <input class="menu-btn hidden" type="checkbox" id="menu-btn">
+    <label class="menu-icon block cursor-pointer md:hidden px-2 py-4 relative select-none" for="menu-btn">
+        <span class="navicon bg-grey-darkest flex items-center relative"></span>
+    </label>
+
+    <ul class="menu border-b md:border-none flex justify-end list-reset m-0 w-full md:w-auto">
+        <li class="border-t md:border-none">
+            <a href="/" class="block md:inline-block px-4 py-3 no-underline text-grey-darkest hover:text-grey-darker font-bold">Home</a>
+        </li>
+
+        <li class="border-t md:border-none">
+            <a href="/about/" class="block md:inline-block px-4 py-3 no-underline text-grey-darkest hover:text-grey-darker">Products</a>
+        </li>
+
+        <li class="border-t md:border-none">
+            <a href="/blog/" class="block md:inline-block px-4 py-3 no-underline text-grey-darkest hover:text-grey-darker">Blog</a>
+        </li>
+    </ul>
+</nav>
+<div>
+    <!-- Swiper -->
+    <div class="swiper-container" dir="rtl">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/slider1.jpg" class="w-screen">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/slider2.jpg" class="w-screen">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/s4.png" class="w-screen">
+            </div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+        <!-- Add Navigation -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+    </div>
+</div>
+<div class="bg-pink-200 text-center">
+    <h1 class="text-5xl font-bold py-6">Exclusive Products</h1>
+</div>
+<div class="mt-10 mx-4">
+    <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 gap-6">
+        <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
+            <div class="p-8">
+                <img src="img/p1.jpg" class="w-auto">
+            </div>
+            <div class="text-center">
+                <a href="#" class="text-xl font-bold text-purple-800">Test Product Name</a>
+            </div>
+            <div class="text-center">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance features and at best price.
+                </p>
+            </div>
+            <div class="text-center py-3">
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+        </div>
+        <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
+            <div class="p-8">
+                <img src="img/p2.jpg" class="w-auto">
+            </div>
+            <div class="text-center">
+                <a href="#" class="text-xl font-bold text-purple-800">Test Product Name</a>
+            </div>
+            <div class="text-center">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance features and at best price.
+                </p>
+            </div>
+            <div class="text-center py-3">
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+        </div>
+        <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
+            <div class="p-8">
+                <img src="img/p1.jpg" class="w-auto">
+            </div>
+            <div class="text-center">
+                <a href="#" class="text-xl font-bold text-purple-800">Test Product Name</a>
+            </div>
+            <div class="text-center">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance features and at best price.
+                </p>
+            </div>
+            <div class="text-center py-3">
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+        </div>
+        <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
+            <div class="p-8">
+                <img src="img/p1.jpg" class="w-auto">
+            </div>
+            <div class="text-center">
+                <a href="#" class="text-xl font-bold text-purple-800">Test Product Name</a>
+            </div>
+            <div class="text-center">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance features and at best price.
+                </p>
+            </div>
+            <div class="text-center py-3">
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+        </div>
+        <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
+            <div class="p-8">
+                <img src="img/p1.jpg" class="w-auto">
+            </div>
+            <div class="text-center">
+                <a href="#" class="text-xl font-bold text-purple-800">Test Product Name</a>
+            </div>
+            <div class="text-center">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance features and at best price.
+                </p>
+            </div>
+            <div class="text-center py-3">
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+        </div>
+        <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
+            <div class="p-8">
+                <img src="img/p1.jpg" class="w-auto">
+            </div>
+            <div class="text-center">
+                <a href="#" class="text-xl font-bold text-purple-800">Test Product Name</a>
+            </div>
+            <div class="text-center">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance features and at best price.
+                </p>
+            </div>
+            <div class="text-center py-3">
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+        </div>
+        <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
+            <div class="p-8">
+                <img src="img/p1.jpg" class="w-auto">
+            </div>
+            <div class="text-center">
+                <a href="#" class="text-xl font-bold text-purple-800">Test Product Name</a>
+            </div>
+            <div class="text-center">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance features and at best price.
+                </p>
+            </div>
+            <div class="text-center py-3">
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+        </div>
+        <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
+            <div class="p-8">
+                <img src="img/p1.jpg" class="w-auto">
+            </div>
+            <div class="text-center">
+                <a href="#" class="text-xl font-bold text-purple-800">Test Product Name</a>
+            </div>
+            <div class="text-center">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance features and at best price.
+                </p>
+            </div>
+            <div class="text-center py-3">
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-shopping-cart"></i>
+                </button>
+                <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+                    <i class="fas fa-heart"></i>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="bg-pink-200 text-center my-6">
+    <h1 class="text-5xl font-bold py-6">Latest Blog Posts</h1>
+</div>
+<div class="mx-4 mt-10">
+    <div class="text-right">
+        <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
+            View All Blog Posts
+        </button>
+    </div>
+    <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 gap-6 my-5">
+        <div class="shadow-xl hover:shadow-2xl cursor-pointer">
+            <div class="">
+                <img src="img/b1.jpg" class="w-auto">
+            </div>
+            <div class="mx-2 mt-4">
+                <a href="#" class="text-2xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
+            </div>
+            <div class="py-3 mx-2">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance le phone le phone  with all the adv features and at best price...
+                </p>
+            </div>
+        </div>
+        <div class="shadow-xl hover:shadow-2xl cursor-pointer">
+            <div class="">
+                <img src="img/b1.jpg" class="w-auto">
+            </div>
+            <div class="mx-2 mt-4">
+                <a href="#" class="text-2xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
+            </div>
+            <div class="py-3 mx-2">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance le phone le phone  with all the adv features and at best price...
+                </p>
+            </div>
+        </div>
+        <div class="shadow-xl hover:shadow-2xl cursor-pointer">
+            <div class="">
+                <img src="img/b1.jpg" class="w-auto">
+            </div>
+            <div class="mx-2 mt-4">
+                <a href="#" class="text-2xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
+            </div>
+            <div class="py-3 mx-2">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance le phone le phone  with all the adv features and at best price...
+                </p>
+            </div>
+        </div>
+        <div class="shadow-xl hover:shadow-2xl cursor-pointer">
+            <div class="">
+                <img src="img/b1.jpg" class="w-auto">
+            </div>
+            <div class="mx-2 mt-4">
+                <a href="#" class="text-2xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
+            </div>
+            <div class="py-3 mx-2">
+                <p class="text-gray-600 text-sm">
+                    This is a Mobile phone with all the advance le phone le phone  with all the adv features and at best price...
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="bg-gray-200">
+    <div class="grid lg:grid-cols-5 md:grid-cols-3 gap-12 sm:grid-cols-2 py-20 mx-8">
+        <div class="col-span-1">
+            <h1 class="text-purple-700 text-xl font-bold mb-4">
+                Be the first to know
+            </h1>
+            <p>
+                Be the first to find out about the latest bets when you sign
+                up for our newsletter. Short reads and no spam.
+            </p>
+        </div>
+        <div class="col-span-1">
+            <h1 class="text-purple-700 text-xl font-bold mb-4">
+                Follow Us
+            </h1>
+            <div class="text-xl">
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-twitter"></i>
+            </div>
+        </div>
+        <div class="col-span-1">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>FAQ</li>
+                <li>Latest Product</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+        <div class="col-span-1">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>FAQ</li>
+                <li>Latest Product</li>
+                <li>Blog</li>
+            </ul>
+        </div>
+        <div class="col-span-1">
+            <h1 class="text-purple-700 text-2xl font-bold uppercase">Company Logo</h1>
+            <p>© Company 2020 Packaged with care.</p>
+        </div>
+    </div>
+</div>
+
+<script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script>
+    var swiper = new Swiper('.swiper-container', {
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+    });
+</script>
 </body>
 </html>
