--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 <div class="bg-pink-200 text-center">
     <h1 class="text-5xl font-bold py-6">Exclusive Products</h1>
 </div>
-<div class="mt-10 mx-4">
+<div class="container mx-auto">
     <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 gap-6">
         <div class="shadow-xl p-4 hover:shadow-2xl cursor-pointer">
             <div class="p-8">
@@ -235,7 +235,7 @@
 <div class="bg-pink-200 text-center my-6">
     <h1 class="text-5xl font-bold py-6">Latest Blog Posts</h1>
 </div>
-<div class="mx-4 mt-10">
+<div class="mx-4 mt-10 container mx-auto">
     <div class="text-right">
         <button type="button" class="bg-purple-700 py-2 px-3 text-white text-sm rounded font-bold">
             View All Blog Posts
@@ -247,7 +247,7 @@
                 <img src="img/b1.jpg" class="w-auto">
             </div>
             <div class="mx-2 mt-4">
-                <a href="#" class="text-2xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
+                <a href="#" class="text-xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
             </div>
             <div class="py-3 mx-2">
                 <p class="text-gray-600 text-sm">
@@ -260,7 +260,7 @@
                 <img src="img/b1.jpg" class="w-auto">
             </div>
             <div class="mx-2 mt-4">
-                <a href="#" class="text-2xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
+                <a href="#" class="text-xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
             </div>
             <div class="py-3 mx-2">
                 <p class="text-gray-600 text-sm">
@@ -273,7 +273,7 @@
                 <img src="img/b1.jpg" class="w-auto">
             </div>
             <div class="mx-2 mt-4">
-                <a href="#" class="text-2xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
+                <a href="#" class="text-xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
             </div>
             <div class="py-3 mx-2">
                 <p class="text-gray-600 text-sm">
@@ -286,7 +286,7 @@
                 <img src="img/b1.jpg" class="w-auto">
             </div>
             <div class="mx-2 mt-4">
-                <a href="#" class="text-2xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
+                <a href="#" class="text-xl font-bold text-purple-800 leading-8">Top 5 Bodybuilding Supplements for Building</a>
             </div>
             <div class="py-3 mx-2">
                 <p class="text-gray-600 text-sm">
@@ -297,8 +297,8 @@
     </div>
 </div>
 
-<div class="bg-gray-200">
-    <div class="grid lg:grid-cols-5 md:grid-cols-3 gap-12 sm:grid-cols-2 py-20 mx-8">
+<div class="bg-gray-200 mt-16">
+    <div class="grid lg:grid-cols-5 md:grid-cols-3 gap-12 sm:grid-cols-2 py-20 container mx-auto">
         <div class="col-span-1">
             <h1 class="text-purple-700 text-xl font-bold mb-4">
                 Be the first to know
